--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dayjs": "^1.8.28",
+    "dotenv": "^8.2.0",
     "firebase-admin": "^8.12.1",
     "node-schedule": "^1.3.2",
     "node-telegram-bot-api": "^0.50.0",
@@ -21,6 +22,7 @@
     "eslint": "^7.3.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsdoc": "^28.6.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1"
