--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "firebase-admin": "^8.13.0",
     "node-schedule": "^1.3.2",
     "node-telegram-bot-api": "^0.50.0",
-    "tgfancy": "^0.13.0"
+    "tgfancy": "git+https://github.com/ZanderOlidan/tgfancy.git"
   },
   "devDependencies": {
     "eslint": "^7.3.0",
