--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/text-to-speech": "^3.1.1",
     "dayjs": "^1.8.33",
     "dotenv": "^8.2.0",
     "firebase-admin": "^8.13.0",
